
/* Class = "UILabel"; text = "Pairer"; ObjectID = "8xe-X4-fSd"; */
"8xe-X4-fSd.text" = "Pairer";

/* Class = "UIViewController"; title = "Pair"; ObjectID = "Dgn-NI-C92"; */
"Dgn-NI-C92.title" = "Pair";

/* Class = "UISegmentedControl"; I78-25-uBp.segmentTitles[0] = "km/h"; ObjectID = "I78-25-uBp"; */
"I78-25-uBp.segmentTitles[0]" = "km/h";

/* Class = "UISegmentedControl"; I78-25-uBp.segmentTitles[1] = "m/s"; ObjectID = "I78-25-uBp"; */
...
