...
                self.name = @"Omega-Splcier requires Bluetooth";
                self.details = @"It seems that your device is not compatible.";
                self.navigationState = OSNavigationBack;
                break;
                
            case OSErrorBluetoothPoweredOff:
                self.name = @"Omega-Splicer requires Bluetooth";
                self.details = @"Please enable Bluetooth to coninue using this app.";
                self.urlScheme = [NSURL URLWithString:@"prefs:root=Bluetooth"];
                self.urlSchemeName = @"Settings";
                self.navigationState = OSNavigationBack;
                break;
                
...
