...
            </objects>
            <point key="canvasLocation" x="-75" y="125"/>
        </scene>
        <!--Fly-->
        <scene sceneID="fQF-zG-SCe">
            <objects>
                <viewController storyboardIdentifier="flyPortrait" title="Fly" id="cuf-x2-gj9" customClass="OSFlyPortraitViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="UcG-rg-Pff"/>
                        <viewControllerLayoutGuide type="bottom" id="9j1-oh-q8r"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="I5U-fj-hGr">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OSBlurBackground" translatesAutoresizingMaskIntoConstraints="NO" id="oyH-T9-8OE">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UkM-CI-4zB" customClass="OSJoystick">
                                <rect key="frame" x="50" y="422" width="128" height="128"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="leftJoystickVIew">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="AUs-XJ-xFG"/>
                                    <constraint firstAttribute="width" constant="128" id="Vsd-22-YkM"/>
                                </constraints>
...
            </objects>
            <point key="canvasLocation" x="758" y="-547"/>
        </scene>
        <!--Settings-->
        <scene sceneID="ckH-7U-IC6">
            <objects>
                <viewController title="Settings" id="YT6-IW-WlR" customClass="OSSettingsViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="mxS-1C-alp"/>
                        <viewControllerLayoutGuide type="bottom" id="Y8h-XB-yCT"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="qtb-sK-dT5">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="I78-25-uBp">
                                <rect key="frame" x="60" y="286" width="480" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="I78-25-uBp" secondAttribute="height" multiplier="75:7" id="w3b-Gf-49O"/>
                                </constraints>
                                <segments>
                                    <segment title="km/h"/>
                                    <segment title="m/s"/>
                                    <segment title="mph"/>
                                </segments>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="w3b-Gf-49O"/>
                                    </mask>
...
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="E7B-Y7-Qid">
                                <rect key="frame" x="60" y="436" width="480" height="29"/>
                                <segments>
                                    <segment title="Joystick"/>
                                    <segment title="Gyroscope"/>
                                </segments>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <connections>
                                    <action selector="controlsChanged:" destination="YT6-IW-WlR" eventType="valueChanged" id="NQl-Rq-dfs"/>
                                </connections>
                            </segmentedControl>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xaN-ut-dho">
                                <rect key="frame" x="60" y="136" width="480" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="xaN-ut-dho" secondAttribute="height" multiplier="75:7" id="5Nd-l9-Oxv"/>
                                </constraints>
                                <segments>
                                    <segment title="Portrait"/>
                                    <segment title="Landscape"/>
                                </segments>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="5Nd-l9-Oxv"/>
                                    </mask>
...
