...
    <scenes>
        <!--Interface Controller-->
        <scene sceneID="aou-V4-d1y">
            <objects>
                <controller id="AgC-eL-Hgc" customClass="InterfaceController">
                    <items>
                        <label alignment="center" text="Omega-Splicer" id="9UP-U7-qIU"/>
                        <button width="1" alignment="left" title="Fly" id="qE2-mX-G8c">
                            <connections>
                                <segue destination="UzN-V2-7WN" kind="push" id="VPs-tN-lpt"/>
                            </connections>
                        </button>
                        <button width="1" alignment="left" title="Pair" id="67Q-zS-h2J">
                            <connections>
                                <segue destination="fr1-fD-KdY" kind="push" id="KeL-Sw-4sH"/>
                            </connections>
                        </button>
                        <button width="1" alignment="left" title="Settings" id="10x-10-klL">
                            <connections>
...
