...
    [super viewDidAppear:animated];
    NSNumber *value = [NSNumber numberWithInt:UIInterfaceOrientationLandscapeLeft];
    [[UIDevice currentDevice] setValue:value forKey:@"orientation"];
}

- (void)setupJoystick {
    [self.leftJoystick setThumbImage:[UIImage imageNamed:@"joy_thumb"] andBGImage:[UIImage imageNamed:@"stick_base"]];
    [self.rightJoystick setThumbImage:[UIImage imageNamed:@"joy_thumb"] andBGImage:[UIImage imageNamed:@"stick_base"]];
    self.rightJoystick.backgroundColor = [UIColor clearColor];
    self.leftJoystick.backgroundColor = [UIColor clearColor];
}

- (void)displayJoystick {
...
